@@ -1,3 +1,7 @@
+[B]4.5.5[/B]
+-Workaround for unplayable https urls on linux
+-Restore event and subtitled channels
+
 [B]4.5.4[/B]
 -Rexeg updated to deal with site change
 
